# deepagents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  release-please-config.json
.github/: CODEOWNERS  RELEASING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  privileged.yml
.github/scripts/: check_lockfiles_pre_commit.py  pr-labeler-config.json  test_check_lockfiles_pre_commit.py
.github/workflows/: auto-label-by-package.yml  check_lockfiles.yml  ci.yml  pr_lint.yml  release-please.yml  release.yml
examples/async-subagent-server/: pyproject.toml  server.py  supervisor.py
examples/better-harness/: pyproject.toml
examples/content-builder-agent/: content_writer.py  pyproject.toml  subagents.yaml
examples/deep_research/: agent.py  pyproject.toml
examples/deep_research/research_agent/: RESEARCHER_INSTRUCTIONS.md  RESEARCH_WORKFLOW_INSTRUCTIONS.md  SUBAGENT_DELEGATION_INSTRUCTIONS.md  prompts.py
examples/llm-wiki/: pyproject.toml
examples/nvidia_deep_agent/: pyproject.toml
examples/rlm_agent/: pyproject.toml
examples/talon-whatsapp/: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml
examples/text-to-sql-agent/: pyproject.toml
libs/acp/: pyproject.toml
libs/acp/deepagents_acp/: server.py
libs/acp/tests/: test_agent.py
libs/cli/: CHANGELOG.md  README.md  pyproject.toml
libs/cli/deepagents_cli/: _version.py  main.py
libs/cli/deepagents_cli/deploy/: api_client.py  commands.py  project.py
libs/cli/examples/deploy-content-writer/: agent.json
libs/cli/examples/skills/skill-creator/scripts/: init_skill.py
libs/cli/tests/unit_tests/deploy/: test_deploy_command.py  test_init_command.py  test_payload.py  test_project.py
libs/code/: AGENTS.md  CHANGELOG.md  COMMANDS.md  pyproject.toml
libs/code/deepagents_code/: _env_vars.py  _session_stats.py  _textual_patches.py  _version.py  agent.py  app.py  command_registry.py  config.py  configurable_model.py  filesystem_empty_result.py  input.py  local_context.py  main.py  mcp_auth.py  mcp_commands.py  mcp_tools.py  media_utils.py  memory_guard.py  model_config.py  offload.py  onboarding.py  remote_client.py  server.py  server_graph.py  sessions.py  system_prompt.md  textual_adapter.py  theme.py  tools.py  update_check.py
libs/code/deepagents_code/widgets/: autocomplete.py  chat_input.py  cwd_switch.py  install_confirm.py  loading.py  messages.py  restart_prompt.py  thread_selector.py
libs/code/examples/skills/arxiv-search/: arxiv_search.py
libs/code/tests/integration_tests/: test_compact_resume.py  test_sandbox_factory.py
libs/code/tests/unit_tests/: conftest.py  test_agent.py  test_agent_friendly.py  test_app.py  test_approval.py  test_auth_display.py  test_autocomplete.py  test_charset.py  test_chat_input.py  test_command_registry.py  test_config.py  test_cwd_switch.py  test_event_bus.py  test_install_command.py  test_install_confirm.py  test_launch_init.py  test_links.py  test_loading.py  test_local_context.py  test_main.py  test_main_acp_mode.py  test_main_args.py  test_mcp_auth.py  test_mcp_commands.py  test_mcp_login_modal.py  test_mcp_tools.py  test_mcp_viewer.py  test_memory_guard.py  test_message_store.py  test_messages.py  test_model_config.py  test_model_switch.py  test_non_interactive.py  test_notifications.py  test_offload.py  test_onboarding.py  test_reload.py  test_remote_client.py  test_restart_prompt.py  test_resume_state.py  (+13 more)
libs/code/tests/unit_tests/tools/: test_current_thread.py
libs/deepagents/: pyproject.toml
libs/deepagents/deepagents/: graph.py
libs/deepagents/deepagents/backends/: context_hub.py  protocol.py  store.py
libs/deepagents/deepagents/middleware/: filesystem.py  memory.py  patch_tool_calls.py  skills.py  summarization.py
libs/deepagents/deepagents/profiles/harness/: harness_profiles.py
libs/deepagents/tests/unit_tests/middleware/: test_compact_tool.py
libs/evals/: pyproject.toml
libs/evals/deepagents_evals/: radar.py
libs/evals/deepagents_harbor/: langsmith_environment.py
libs/evals/tests/unit_tests/: test_harbor_backend.py  test_langsmith.py  test_langsmith_environment.py  test_pytest_reporter.py  test_radar.py
libs/partners/daytona/: pyproject.toml
libs/partners/modal/: pyproject.toml
libs/partners/quickjs/: pyproject.toml
libs/partners/quickjs/langchain_quickjs/: middleware.py
libs/partners/quickjs/tests/unit_tests/: test_end_to_end.py  test_ptc.py  test_repl_middleware.py
libs/partners/runloop/: pyproject.toml
libs/talon/: Makefile  README.md  pyproject.toml
libs/talon/deepagents_talon/: __init__.py  __main__.py  _version.py  config.py  data_lifecycle.py  fleet.py  host.py  interfaces.py  mcp.py  media.py  observability.py  runtime.py  speech.py
libs/talon/deepagents_talon/channels/: __init__.py  base.py  whatsapp.py
libs/talon/deepagents_talon/channels/whatsapp_bridge/: bridge.js  package-lock.json  package.json
libs/talon/deepagents_talon/cron/: __init__.py  jobs.py  scheduler.py  tools.py
libs/talon/tests/: __init__.py  test_config.py  test_data_lifecycle.py  test_fleet.py  test_host.py  test_import_compat.py  test_mcp.py  test_media.py  test_observability.py  test_runtime.py  test_speech.py
libs/talon/tests/channels/: __init__.py  test_base.py  test_whatsapp.py
libs/talon/tests/cron/: __init__.py  test_jobs.py  test_scheduler.py
libs/talon/tests/integration_tests/: __init__.py  test_core_flows.py
