[project]
name = "async-subagent-server-example"
version = "0.1.0"
description = "Self-hosted async subagent server example using deepagents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.5",
    "langgraph-sdk>=0.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
