[project]
name = "nemotron-deep-agent"
version = "0.1.0"
description = "General-purpose deep agent: frontier orchestrator + Nemotron Super subagents + NVIDIA GPU skills"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.3.4,<2.0.0",
    "langchain-anthropic>=1.4.4",
    "langgraph>=1.2.4",
    "tavily-python>=0.7.25",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "langgraph-cli[inmem]>=0.4.27",
    "modal>=1.4.3",
    "langchain-modal>=0.0.5",
    "langchain-nvidia-ai-endpoints>=1.4.1",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
