[project]
name = "repl-swarm-example"
version = "0.1.0"
description = "REPL swarm example — fan out subagent tasks from inside the REPL via a skill module"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "langchain-quickjs",
    "langchain-anthropic>=1.4.4",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }
langchain-quickjs = { path = "../../libs/partners/quickjs", editable = true }
