[project]
name = "text2sql-deepagent"
version = "0.1.0"
description = "A natural language to SQL query agent powered by LangChain's Deep Agents framework and Claude Sonnet 4.5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.3.4,<2.0.0",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.4",
    "sqlalchemy>=2.0.50",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/langchain-ai/deepagents/tree/main/examples/text-to-sql-agent"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
